// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate --secretstore-id default-keystore --secretstore-type KeyStoreSecretStore --global --secret-id am.applications.agents.remote.consent.request.signing.ES256 --alias es256test --type classic": Should activate the es256test alias on a global secretstore 1`] = `""`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate --secretstore-id default-keystore --secretstore-type KeyStoreSecretStore --global --secret-id am.applications.agents.remote.consent.request.signing.ES256 --alias es256test --type classic": Should activate the es256test alias on a global secretstore 2`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
✔ Activated the mapping alias es256test in the mapping am.applications.agents.remote.consent.request.signing.ES256 in the secret store default-keystore.
"
`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate -gi EnvironmentAndSystemPropertySecretStore -t EnvironmentAndSystemPropertySecretStore -s am.services.httpclient.mtls.clientcert.testClientCert.secret -a alias -m classic": should fail since EnvironmentAndSystemPropertySecretStore has no mappings 1`] = `
"'EnvironmentAndSystemPropertySecretStore' does not have mappings.
"
`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate -gi EnvironmentAndSystemPropertySecretStore -t EnvironmentAndSystemPropertySecretStore -s am.services.httpclient.mtls.clientcert.testClientCert.secret -a alias -m classic": should fail since EnvironmentAndSystemPropertySecretStore has no mappings 2`] = `1`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate -i ESV -s am.services.httpclient.mtls.clientcert.testClientCert.secret -a esv-test-client-cert": Should activate the alias esv-test-client-cert 1`] = `""`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate -i ESV -s am.services.httpclient.mtls.clientcert.testClientCert.secret -a esv-test-client-cert": Should activate the alias esv-test-client-cert 2`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
✔ Activated the mapping alias esv-test-client-cert in the mapping am.services.httpclient.mtls.clientcert.testClientCert.secret in the secret store ESV.
"
`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate -i ESV -t GoogleSecretManagerSecretStoreProvider -s am.services.httpclient.mtls.clientcert.testClientCert.secret -a esv-does-not-exist": Should fail when alias does not exist 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
✖ Could not find the alias esv-does-not-exist in the mapping am.services.httpclient.mtls.clientcert.testClientCert.secret in the secret store ESV
"
`;

exports[`frodo secretstore mapping alias activate "frodo secretstore mapping alias activate -i ESV -t GoogleSecretManagerSecretStoreProvider -s am.services.httpclient.mtls.clientcert.testClientCert.secret -a esv-does-not-exist": Should fail when alias does not exist 2`] = `1`;
